# FortiusANT_uv

pythoncode/: FortiusAntBody.py  FortiusAnt_BLE.bat  FortiusAnt_START.bat  bleBless.py  bleBlessClass.py  pyproject.toml  usbTrainer.py
