[project]
name = "pythoncode"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bless>=0.2.6",
    "lib-programname>=2.0.9",
    "numpy!=1.19.4",
    "pyinstaller>=6.19.0",
    "pysetupdi",
    "pyusb>=1.3.1",
    "requests>=2.33.1",
    "service-identity>=24.2.0",
    "wheel>=0.46.3",
    "wxpython>=4.2.5",
]

[tool.uv.sources]
pysetupdi = { git = "https://github.com/gwangyi/pysetupdi.git" }
